--- a/CSN_DA21TTA_NguyenLamQuocBao_WebShopPC_JavaScript/src/Fron/package.json
+++ b/CSN_DA21TTA_NguyenLamQuocBao_WebShopPC_JavaScript/src/Fron/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "0.21.4",
     "date-fns": "^2.30.0",
+    "js-cookie": "^3.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
