--- a/project-pc-frontend-reactjs/package.json
+++ b/project-pc-frontend-reactjs/package.json
@@ -3,26 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "0.21.4",
-    "date-fns": "^2.30.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.8",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "axios": "1.7.7",
+    "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "7.2.5",
-    "react-router-dom": "5.3.0",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "9.1.2",
+    "react-router-dom": "6.27.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "8.0.2",
-    "redux": "4.1.1",
-    "sass": "^1.69.5",
-    "web-vitals": "^2.1.4"
+    "react-toastify": "10.0.6",
+    "redux": "5.0.1",
+    "sass": "^1.79.5",
+    "web-vitals": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
