--- a/project-pc-frontend-reactjs/package.json
+++ b/project-pc-frontend-reactjs/package.json
@@ -10,7 +10,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@iconify/react": "^5.0.2",
     "@mui/icons-material": "^6.1.3",
+    "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.8",
