--- a/project-pc-frontend-reactjs/package.json
+++ b/project-pc-frontend-reactjs/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "axios": "1.7.7",
+    "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
