--- a/project-pc-backend-lavarel/.env
+++ b/project-pc-backend-lavarel/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3NIEgU9y0fPfNhChLWtr2FTg0tUq8Kqjm8dGge4KIfQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
