--- a/project-pc-frontend-reactjs/package.json
+++ b/project-pc-frontend-reactjs/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.1.6",
     "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.6",
+    "@mui/x-data-grid": "^7.23.5",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.8",
     "@testing-library/jest-dom": "^6.5.0",
@@ -21,12 +22,13 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "1.7.7",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.6",
+    "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "9.1.2",
     "react-router-dom": "6.27.0",
