--- a/project-pc-frontend-reactjs/package.json
+++ b/project-pc-frontend-reactjs/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^4.0.0",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-redux": "9.1.2",
